--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "description": "Server Side Proyecto Grupal",
   "main": "index.js",
   "engines": {
@@ -22,7 +22,6 @@
     "express-validator": "^6.12.1",
     "helmet": "^4.6.0",
     "morgan": "^1.10.0",
-    "pg": "^8.7.1",
     "sequelize": "^6.6.5"
   },
   "devDependencies": {
