--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "npm": ">=6.14.6"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
